@@ -1,5 +1,5 @@
 % generated by Docutils <http://docutils.sourceforge.net/>
-\documentclass[a4paper,DIV=12,english]{article}
+\documentclass[a4paper,english]{article}
 \usepackage{babel}
 %\usepackage[OT1]{fontenc}
 \usepackage[latin1]{inputenc}
@@ -13,7 +13,6 @@
 \setlength{\extrarowheight}{2pt}
 \newlength{\DUtablewidth} % internal use in tables
 \usepackage{tabularx}
-\usepackage{typearea}
 % settings for footnotes as floats:
 \setlength{\floatsep}{0.5em}
 \setlength{\textfloatsep}{\fill}
