@@ -24,7 +24,7 @@ def suite():
 
 latex_head_prefix = b(
 r"""% generated by Docutils <http://docutils.sourceforge.net/>
-\documentclass[a4paper,DIV=12,english]{article}
+\documentclass[a4paper,english]{article}
 \usepackage{babel}
 %\usepackage[OT1]{fontenc}
 \usepackage[latin1]{inputenc}
@@ -32,8 +32,7 @@ r"""% generated by Docutils <http://docutils.sourceforge.net/>
 \usepackage{fixltx2e} % fix LaTeX2e shortcomings
 """)
 
-latex_requirements = b("""\usepackage{typearea}
-""")
+latex_requirements = b('')
 
 latex_head = b(r"""
 %%% User specified packages and stylesheets
@@ -49,11 +48,9 @@ latex_requirements_table = b(r"""\usepackage{longtable}
 \usepackage{array}
 \setlength{\extrarowheight}{2pt}
 \newlength{\DUtablewidth} % internal use in tables
-\usepackage{typearea}
 """)
 
 latex_requirements_graphicx = b("""\usepackage{graphicx}
-\usepackage{typearea}
 """) 
 
 
